--- a/index.html
+++ b/index.html
@@ -1,9 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title> Diego Sanchez</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diego Sanchez</title>
+    <style>
+        body{
+            background-color: #F0F600;
+        }
+        div{
+            background-color: white;
+            border: ipx solid black;
+            padding: 12px;
+            width: 60%;
+            margin: 0 auto;
+        }
+        fieldset{
+            margin-bottom: 12px;
+        }
+        legend{
+            background-color: cadetblue;
+            padding: 5px;
+            border-radius: 20px;
+            font-weight: bold;
+        }
+    </style>
+    <link rel="stylesheet" href="CSS/index.CSS">
 </head>
-
 <body>
-    <h1>pagina</h1>
+    <div class="name">
+    <div>
+        <img src="foto.jpg" width="150" height="150">
+        <h1>Diego Fernando Sanchez</h1>
+        <p>vereda periconegro-puerto tejada(cauca)</p>
+        <p>telefono: 3023424233</p>
+        <fieldset>
+        <legend>Datos generales</legend>        <ul>
+            <li>Fecha de nacimiento: 06/03/1999</li>
+            <li>Cedula: 1059990717</li>
+            <li>Email: diego.mezu@correounivalle.edu.co</li>
+        </ul>
+    </fieldset>
+    <fieldset>
+        <legend>Formacion academica</legend>
+        <li>Bachillerato: colegio tecnico comfacauca(puerto tejada)</li>
+        <li>Tecnologia  : actualmente sexto semestre   </li>
+    </fieldset>
+    <fieldset>
+        <legend>Experiencia laboral</legend>
+        <li>ninguna</li>
+    </fieldset>
+    <fieldset>
+        <legend>Lenguas</legend>
+        <li>Materna: Español</li>
+        <li>Ingles: Nivel basico</li>
+        </fieldset>
+    </div>
+</div>
 </body>
 </html>
